<resources>
    <string name="app_name">Geoquiz</string>
    <string name="false_button">False</string>
    <string name="true_button">True</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_text">Constantinople is the largest city in Turkey?</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_activity_cheat">Cheat</string>
    <string name="next_button">Next</string>
    <string name="question_australia">Australea is its own continent</string>
    <string name="question_atlantic">The Atlantic ocean is the largest ocean</string>
    <string name="question_taiwan">Taiwan is an independent country</string>
    <string name="score">"Score: "</string>
    <string name="played_text">"Plays: "</string>
</resources>